# TypeCmd

./: .gitignore  0.5.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  main.rs.bak
docs/: ProjectLog.md
src/: colors.rs  command.rs  error.rs  executor.rs  history.rs  lib.rs  main.rs  parser.rs  repl.rs  variables.rs  variablesint.rs
