[package]
name = "typecmd"
version = "0.4.0"
edition = "2024"
description = "A TypeScript-like command line simulator with history support"
repository = "https://github.com/hunter-hongg/TypeCmd"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[features]
default = []
cli = []  # 启用命令行接口